welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:2: error: not found: value max
  max=nums(0)
  ^maxValue:4: error: not found: value max
    if (nums(i)>max) {
                ^maxValue:5: error: not found: value max
      max=nums(i)
      ^maxValue:8: error: not found: value max
  return max
         ^